--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 h1 {
   font-family: 'Honk', sans-serif; 
   font-size: 3.5rem;
+  padding: 0px 5px;
 }
 
 * {
@@ -18,6 +19,9 @@ h2 {
   font-weight: 700;
   font-style: normal;
   font-size: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 body {
@@ -46,6 +50,13 @@ header {
 
 /** global class styling **/
 
+div {
+	position: relative;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+	
 
 @media (max-width: 650px) {
   nav {
@@ -74,4 +85,12 @@ nav > ul {
   nav > ul {
     flex-direction: column;
   }
+}
+
+#Services > ul {
+	display: flex;
+	flex-direction: row;
+	width: 90%;
+	justify-content: space-around;
+	padding: 50px;
 }
