--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ li {
 }
 
 header {
-  position: relative;
+  position: sticky;
   top: 0;
   min-height: 75px;
   padding: 0px 20px;
@@ -49,6 +49,7 @@ header {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  background-color: #fcfbf7;
 }
 
 /** global class styling **/
@@ -142,4 +143,5 @@ p {
 	opacity: 0.5; 
 	margin: 10px;
 	border-radius: 15px;
+	z-index: -1;
 }
